# ProgettoFinaleLabProgrammazione

./: .gitignore  CMakeLists.txt  Plan.md  README.md  botExampleLog.txt  humanExampleLog.txt  log.txt
.github/workflows/: autoZip.yml
include/: Board.h  BotPlayer.h  CornerTile.h  Player.h  SideTile.h  Tile.h  TileBuilding.h  TileHotel.h  TileHouse.h  TileTerrain.h  TileType.h  helperFunctions.h  monopoly.h
src/: Board.cpp  BotPlayer.cpp  CornerTile.cpp  Player.cpp  SideTile.cpp  Tile.cpp  TileHotel.cpp  TileHouse.cpp  TileTerrain.cpp  helperFunctions.cpp  main.cpp  monopoly.cpp
